--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/cashier": "^15.7",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "league/csv": "^9.24",
         "livewire/livewire": "^3.6.4",
         "livewire/volt": "^1.7.0"
     },
