--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/vite": "^4.0.0",
-        "alpinejs": "^3.14.9",
         "autoprefixer": "^10.4.2",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
@@ -19,7 +18,6 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^7.0.0",
-        "chart.js": "^4.5.0"
+        "@fortawesome/fontawesome-free": "^7.0.0"
     }
 }
