--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^7.0.0"
+        "@fortawesome/fontawesome-free": "^7.0.0",
+        "alpinejs": "^3.14.9"
     }
 }
