--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.10.1",
         "league/csv": "^9.24",
         "livewire/livewire": "^3.6.4",
-        "livewire/volt": "^1.7.0"
+        "livewire/volt": "^1.7.0",
+        "phpoffice/phpspreadsheet": "^5.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
