--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^7.0.0",
-        "alpinejs": "^3.14.9"
+        "alpinejs": "^3.14.9",
+        "chart.js": "^4.5.0"
     }
 }
