--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "beyondcode/laravel-mailbox": "^5.0",
         "laravel/cashier": "^15.7",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "league/csv": "^9.24",
         "livewire/livewire": "^3.6.4",
         "livewire/volt": "^1.7.0",
-        "phpoffice/phpspreadsheet": "^5.0"
+        "phpoffice/phpspreadsheet": "^5.0",
+        "webklex/laravel-imap": "^6.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
